--- a/UI final/assets/css/main.css
+++ b/UI final/assets/css/main.css
@@ -802,13 +802,24 @@ section {
   position:relative;
   overflow: hidden;
   margin-left: 280px;
-  padding-bottom:150px;
+  padding-bottom:400px;
   text-align: center;
+}
+
+.hero button{
+	color: #11AAA4;
+	font-size:25px;
+	border-radius: 10px;
+	z-index: 100;
+	background-color: beige;
+ text-align: center;
+	font-family: Bernard MT Condensed;
+	
 }
 
 .hero h1 {
   color: var(--contrast-color);
-  font-size: 100px;
+  font-size: 125px;
   font-weight: 1000;
   align-items: center;
   font-family: Algerian;
@@ -816,7 +827,7 @@ section {
 }
 .hero h2 {
   color: var(--contrast-color);
-  font-size: 50px;
+  font-size: 70px;
   font-weight: 1000;
   align-items: center;
   font-family: Bernard MT Condensed;
@@ -825,7 +836,7 @@ section {
 .hero p {
   color: rgba(var(--default-color-rgb), 0.8);
   margin: 5px 0 0 0;
-  font-size: 20px;
+  font-size: 25px;
 	font-family: Book Antiqua;
 }
 
@@ -2047,173 +2058,10 @@ section {
     transform: rotate(360deg);
   }
 }
+/*
 
-/*--------------------------------------------------------------
-# Portfolio Details Page
---------------------------------------------------------------*/
-/* Portfolio-details Section - Portfolio Details Page
-------------------------------*/
-.portfolio-details .portfolio-details-slider img {
-  width: 100%;
-}
-
-.portfolio-details .swiper-wrapper {
-  height: auto;
-}
-
-.portfolio-details .swiper-button-prev,
-.portfolio-details .swiper-button-next {
-  width: 48px;
-  height: 48px;
-}
-
-.portfolio-details .swiper-button-prev:after,
-.portfolio-details .swiper-button-next:after {
-  color: rgba(255, 255, 255, 0.8);
-  background-color: rgba(0, 0, 0, 0.15);
-  font-size: 24px;
-  border-radius: 50%;
-  width: 48px;
-  height: 48px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: 0.3s;
-}
-
-.portfolio-details .swiper-button-prev:hover:after,
-.portfolio-details .swiper-button-next:hover:after {
-  background-color: rgba(0, 0, 0, 0.3);
-}
-
-@media (max-width: 575px) {
-
-  .portfolio-details .swiper-button-prev,
-  .portfolio-details .swiper-button-next {
-    display: none;
-  }
-}
-
-.portfolio-details .portfolio-info h3 {
-  font-size: 22px;
-  font-weight: 700;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
-  position: relative;
-}
-
-.portfolio-details .portfolio-info h3:after {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 50px;
-  height: 3px;
-  background: var(--primary-color);
-  left: 0;
-  bottom: 0;
-}
-
-.portfolio-details .portfolio-info ul {
-  list-style: none;
-  padding: 0;
-  font-size: 15px;
-}
-
-.portfolio-details .portfolio-info ul li {
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 15px;
-}
-
-.portfolio-details .portfolio-info ul strong {
-  text-transform: uppercase;
-  font-weight: 400;
-  color: rgba(var(--default-color-rgb), 0.5);
-  font-size: 14px;
-}
-
-.portfolio-details .portfolio-info .btn-visit {
-  padding: 8px 40px;
-  background: var(--primary-color);
-  color: var(--contrast-color);
-  border-radius: 50px;
-  transition: 0.3s;
-}
-
-.portfolio-details .portfolio-info .btn-visit:hover {
-  background: rgba(var(--primary-color-rgb), 0.8);
-}
-
-.portfolio-details .portfolio-description h2 {
-  font-size: 26px;
-  font-weight: 700;
-  margin-bottom: 20px;
-}
-
-.portfolio-details .portfolio-description p {
-  padding: 0;
-}
-
-.portfolio-details .portfolio-description .testimonial-item {
-  padding: 30px 30px 0 30px;
-  position: relative;
-  background: rgba(var(--default-color-rgb), 0.03);
-  margin-bottom: 50px;
-}
-
-.portfolio-details .portfolio-description .testimonial-item .testimonial-img {
-  width: 90px;
-  border-radius: 50px;
-  border: 6px solid var(--background-color);
-  float: left;
-  margin: 0 10px 0 0;
-}
-
-.portfolio-details .portfolio-description .testimonial-item h3 {
-  font-size: 18px;
-  font-weight: bold;
-  margin: 15px 0 5px 0;
-  padding-top: 20px;
-}
-
-.portfolio-details .portfolio-description .testimonial-item h4 {
-  font-size: 14px;
-  color: #6c757d;
-  margin: 0;
-}
-
-.portfolio-details .portfolio-description .testimonial-item .quote-icon-left,
-.portfolio-details .portfolio-description .testimonial-item .quote-icon-right {
-  color: rgba(var(--primary-color-rgb), 0.5);
-  font-size: 26px;
-  line-height: 0;
-}
-
-.portfolio-details .portfolio-description .testimonial-item .quote-icon-left {
-  display: inline-block;
-  left: -5px;
-  position: relative;
-}
-
-.portfolio-details .portfolio-description .testimonial-item .quote-icon-right {
-  display: inline-block;
-  right: -5px;
-  position: relative;
-  top: 10px;
-  transform: scale(-1, -1);
-}
-
-.portfolio-details .portfolio-description .testimonial-item p {
-  font-style: italic;
-  margin: 0 0 15px 0 0 0;
-  padding: 0;
-}
-
-/*--------------------------------------------------------------
-# Services Details Page
---------------------------------------------------------------*/
-/* Service-details Section - Services Details Page
-------------------------------*/
+service detail section
+*/
 .service-details .service-box {
   padding: 20px;
   box-shadow: 0px 2px 20px rgba(var(--default-color-rgb), 0.12);
@@ -2340,549 +2188,3 @@ section {
   color: var(--primary-color);
 }
 
-/*--------------------------------------------------------------
-# Blog Page
---------------------------------------------------------------*/
-/* Blog Section - Blog Page
-------------------------------*/
-.blog .posts-list article {
-  box-shadow: 0 4px 16px rgba(var(--default-color-rgb), 0.1);
-  padding: 30px;
-  height: 100%;
-  border-radius: 10px;
-  overflow: hidden;
-}
-
-.blog .posts-list .post-img {
-  max-height: 240px;
-  margin: -30px -30px 15px -30px;
-  overflow: hidden;
-}
-
-.blog .posts-list .post-category {
-  font-size: 16px;
-  color: rgba(var(--default-color-rgb), 0.6);
-  margin-bottom: 10px;
-}
-
-.blog .posts-list .title {
-  font-size: 22px;
-  font-weight: 700;
-  padding: 0;
-  margin: 0 0 20px 0;
-}
-
-.blog .posts-list .title a {
-  color: var(--secondary-color);
-  transition: 0.3s;
-}
-
-.blog .posts-list .title a:hover {
-  color: var(--primary-color);
-}
-
-.blog .posts-list .post-author-img {
-  width: 50px;
-  border-radius: 50%;
-  margin-right: 15px;
-}
-
-.blog .posts-list .post-author {
-  font-weight: 600;
-  margin-bottom: 5px;
-}
-
-.blog .posts-list .post-date {
-  font-size: 14px;
-  color: rgba(var(--default-color-rgb), 0.6);
-  margin-bottom: 0;
-}
-
-.blog .pagination {
-  margin-top: 30px;
-  color: rgba(var(--default-color-rgb), 0.6);
-}
-
-.blog .pagination ul {
-  display: flex;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-.blog .pagination li {
-  margin: 0 5px;
-  transition: 0.3s;
-}
-
-.blog .pagination li a {
-  color: rgba(var(--default-color-rgb), 0.6);
-  padding: 7px 16px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.blog .pagination li.active,
-.blog .pagination li:hover {
-  background: var(--primary-color);
-  color: var(--contrast-color);
-}
-
-.blog .pagination li.active a,
-.blog .pagination li:hover a {
-  color: var(--contrast-color);
-}
-
-/*--------------------------------------------------------------
-# Blog Details Page
---------------------------------------------------------------*/
-/* Blog-details Section - Blog Details Page
-------------------------------*/
-.blog-details .article {
-  box-shadow: 0 4px 16px rgba(var(--default-color-rgb), 0.1);
-  padding: 30px;
-}
-
-.blog-details .post-img {
-  margin: -30px -30px 20px -30px;
-  overflow: hidden;
-}
-
-.blog-details .title {
-  color: var(--secondary-color);
-  font-size: 28px;
-  font-weight: 700;
-  padding: 0;
-  margin: 30px 0;
-}
-
-.blog-details .content {
-  margin-top: 20px;
-}
-
-.blog-details .content h3 {
-  font-size: 22px;
-  margin-top: 30px;
-  font-weight: bold;
-}
-
-.blog-details .content blockquote {
-  overflow: hidden;
-  background-color: rgba(var(--default-color-rgb), 0.05);
-  padding: 60px;
-  position: relative;
-  text-align: center;
-  margin: 20px 0;
-}
-
-.blog-details .content blockquote p {
-  color: var(--default-color);
-  line-height: 1.6;
-  margin-bottom: 0;
-  font-style: italic;
-  font-weight: 500;
-  font-size: 22px;
-}
-
-.blog-details .content blockquote:after {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  width: 3px;
-  background-color: var(--primary-color);
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-.blog-details .meta-top {
-  margin-top: 20px;
-  color: rgba(var(--default-color-rgb), 0.6);
-}
-
-.blog-details .meta-top ul {
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  align-items: center;
-  padding: 0;
-  margin: 0;
-}
-
-.blog-details .meta-top ul li+li {
-  padding-left: 20px;
-}
-
-.blog-details .meta-top i {
-  font-size: 16px;
-  margin-right: 8px;
-  line-height: 0;
-  color: rgba(var(--default-color-rgb), 0.6);
-}
-
-.blog-details .meta-top a {
-  color: rgba(var(--default-color-rgb), 0.6);
-  font-size: 14px;
-  display: inline-block;
-  line-height: 1;
-}
-
-.blog-details .meta-bottom {
-  padding-top: 10px;
-  border-top: 1px solid rgba(var(--default-color-rgb), 0.1);
-}
-
-.blog-details .meta-bottom i {
-  color: rgba(var(--default-color-rgb), 0.6);
-  display: inline;
-}
-
-.blog-details .meta-bottom a {
-  color: rgba(var(--default-color-rgb), 0.6);
-  transition: 0.3s;
-}
-
-.blog-details .meta-bottom a:hover {
-  color: var(--primary-color);
-}
-
-.blog-details .meta-bottom .cats {
-  list-style: none;
-  display: inline;
-  padding: 0 20px 0 0;
-  font-size: 14px;
-}
-
-.blog-details .meta-bottom .cats li {
-  display: inline-block;
-}
-
-.blog-details .meta-bottom .tags {
-  list-style: none;
-  display: inline;
-  padding: 0;
-  font-size: 14px;
-}
-
-.blog-details .meta-bottom .tags li {
-  display: inline-block;
-}
-
-.blog-details .meta-bottom .tags li+li::before {
-  padding-right: 6px;
-  color: var(--default-color);
-  content: ",";
-}
-
-.blog-details .meta-bottom .share {
-  font-size: 16px;
-}
-
-.blog-details .meta-bottom .share i {
-  padding-left: 5px;
-}
-
-.blog-details .sidebar {
-  padding: 30px;
-  box-shadow: 0 4px 16px rgba(var(--default-color-rgb), 0.1);
-}
-
-.blog-details .sidebar .sidebar-title {
-  color: var(--secondary-color);
-  font-size: 20px;
-  font-weight: 700;
-  padding: 0;
-  margin: 0;
-}
-
-.blog-details .sidebar .sidebar-item+.sidebar-item {
-  margin-top: 40px;
-}
-
-.blog-details .sidebar .search-form form {
-  background: var(--background-color);
-  border: 1px solid rgba(var(--default-color-rgb), 0.3);
-  padding: 3px 10px;
-  position: relative;
-}
-
-.blog-details .sidebar .search-form form input[type=text] {
-  border: 0;
-  padding: 4px;
-  border-radius: 4px;
-  width: calc(100% - 40px);
-  background-color: var(--background-color);
-  color: var(--default-color);
-}
-
-.blog-details .sidebar .search-form form input[type=text]:focus {
-  outline: none;
-}
-
-.blog-details .sidebar .search-form form button {
-  background: var(--primary-color);
-  color: var(--background-color);
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  border: 0;
-  font-size: 16px;
-  padding: 0 15px;
-  margin: -1px;
-  transition: 0.3s;
-  border-radius: 0 4px 4px 0;
-  line-height: 0;
-}
-
-.blog-details .sidebar .search-form form button i {
-  line-height: 0;
-}
-
-.blog-details .sidebar .search-form form button:hover {
-  background: rgba(var(--primary-color-rgb), 0.8);
-}
-
-.blog-details .sidebar .categories ul {
-  list-style: none;
-  padding: 0;
-}
-
-.blog-details .sidebar .categories ul li+li {
-  padding-top: 10px;
-}
-
-.blog-details .sidebar .categories ul a {
-  color: rgba(var(--default-color-rgb), 0.8);
-  transition: 0.3s;
-}
-
-.blog-details .sidebar .categories ul a:hover {
-  color: var(--primary-color);
-}
-
-.blog-details .sidebar .categories ul a span {
-  padding-left: 5px;
-  color: rgba(var(--default-color-rgb), 0.5);
-  font-size: 14px;
-}
-
-.blog-details .sidebar .recent-posts .post-item {
-  display: flex;
-  margin-top: 15px;
-}
-
-.blog-details .sidebar .recent-posts img {
-  width: 80px;
-  margin-right: 15px;
-}
-
-.blog-details .sidebar .recent-posts h4 {
-  font-size: 15px;
-  font-weight: bold;
-  margin-bottom: 5px;
-}
-
-.blog-details .sidebar .recent-posts h4 a {
-  color: var(--default-color);
-  transition: 0.3s;
-}
-
-.blog-details .sidebar .recent-posts h4 a:hover {
-  color: var(--primary-color);
-}
-
-.blog-details .sidebar .recent-posts time {
-  display: block;
-  font-style: italic;
-  font-size: 14px;
-  color: rgba(var(--default-color-rgb), 0.5);
-}
-
-.blog-details .sidebar .tags {
-  margin-bottom: -10px;
-}
-
-.blog-details .sidebar .tags ul {
-  list-style: none;
-  padding: 0;
-}
-
-.blog-details .sidebar .tags ul li {
-  display: inline-block;
-}
-
-.blog-details .sidebar .tags ul a {
-  color: rgba(var(--default-color-rgb), 0.7);
-  font-size: 14px;
-  padding: 6px 14px;
-  margin: 0 6px 8px 0;
-  border: 1px solid rgba(var(--default-color-rgb), 0.4);
-  display: inline-block;
-  transition: 0.3s;
-}
-
-.blog-details .sidebar .tags ul a:hover {
-  color: var(--background-color);
-  border: 1px solid var(--primary-color);
-  background: var(--primary-color);
-}
-
-.blog-details .sidebar .tags ul a span {
-  padding-left: 5px;
-  color: rgba(var(--default-color-rgb), 0.4);
-  font-size: 14px;
-}
-
-.blog-details .blog-author {
-  padding: 20px;
-  margin-top: 30px;
-  box-shadow: 0 4px 16px rgba(var(--default-color-rgb), 0.1);
-}
-
-.blog-details .blog-author img {
-  max-width: 120px;
-  margin-right: 20px;
-}
-
-.blog-details .blog-author h4 {
-  font-weight: 600;
-  font-size: 20px;
-  margin-bottom: 0px;
-  padding: 0;
-  color: rgba(var(--default-color-rgb), 0.8);
-}
-
-.blog-details .blog-author .social-links {
-  margin: 0 10px 10px 0;
-}
-
-.blog-details .blog-author .social-links a {
-  color: rgba(var(--default-color-rgb), 0.4);
-  margin-right: 5px;
-}
-
-.blog-details .blog-author p {
-  font-style: italic;
-  color: rgba(var(--default-color-rgb), 0.7);
-  margin-bottom: 0;
-}
-
-.blog-details .comments {
-  margin-top: 30px;
-}
-
-.blog-details .comments .comments-count {
-  font-weight: bold;
-}
-
-.blog-details .comments .comment {
-  margin-top: 30px;
-  position: relative;
-}
-
-.blog-details .comments .comment .comment-img {
-  margin-right: 14px;
-}
-
-.blog-details .comments .comment .comment-img img {
-  width: 60px;
-}
-
-.blog-details .comments .comment h5 {
-  font-size: 16px;
-  margin-bottom: 2px;
-}
-
-.blog-details .comments .comment h5 a {
-  font-weight: bold;
-  color: var(--default-color);
-  transition: 0.3s;
-}
-
-.blog-details .comments .comment h5 a:hover {
-  color: var(--primary-color);
-}
-
-.blog-details .comments .comment h5 .reply {
-  padding-left: 10px;
-  color: rgba(var(--default-color-rgb), 0.8);
-}
-
-.blog-details .comments .comment h5 .reply i {
-  font-size: 20px;
-}
-
-.blog-details .comments .comment time {
-  display: block;
-  font-size: 14px;
-  color: rgba(var(--default-color-rgb), 0.6);
-  margin-bottom: 5px;
-}
-
-.blog-details .comments .comment.comment-reply {
-  padding-left: 40px;
-}
-
-.blog-details .comments .reply-form {
-  margin-top: 30px;
-  padding: 30px;
-  box-shadow: 0 4px 16px rgba(var(--default-color-rgb), 0.1);
-}
-
-.blog-details .comments .reply-form h4 {
-  font-weight: bold;
-  font-size: 22px;
-}
-
-.blog-details .comments .reply-form p {
-  font-size: 14px;
-}
-
-.blog-details .comments .reply-form input {
-  background-color: var(--background-color);
-  color: var(--default-color);
-  border: 1px solid rgba(var(--default-color-rgb), 0.3);
-  font-size: 14px;
-  border-radius: 4px;
-  padding: 10px 10px;
-}
-
-.blog-details .comments .reply-form input:focus {
-  box-shadow: none;
-  border-color: var(--primary-color);
-}
-
-.blog-details .comments .reply-form textarea {
-  background-color: var(--background-color);
-  color: var(--default-color);
-  border: 1px solid rgba(var(--default-color-rgb), 0.3);
-  border-radius: 4px;
-  padding: 10px 10px;
-  font-size: 14px;
-  height: 120px;
-}
-
-.blog-details .comments .reply-form textarea:focus {
-  box-shadow: none;
-  border-color: var(--primary-color);
-}
-
-.blog-details .comments .reply-form .form-group {
-  margin-bottom: 25px;
-}
-
-.blog-details .comments .reply-form .btn-primary {
-  border-radius: 4px;
-  padding: 10px 20px;
-  border: 0;
-  background-color: var(--primary-color);
-  color: var(--contrast-color);
-}
-
-.blog-details .comments .reply-form .btn-primary:hover {
-  color: var(--contrast-color);
-  background-color: rgba(var(--primary-color-rgb), 0.8);
-}
