--- a/UI final/css/style.css
+++ b/UI final/css/style.css
@@ -1,10 +1,4 @@
 
-body{
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    
-}
 h1{
 	text-align: center;
 }
@@ -52,7 +46,9 @@ h1{
 	
 
 }
-
+#icon img{
+	height: 80px; position: fixed; right: 1000px;top: 10px;
+}
 #fear img{
 	height: 150px;
     position: fixed;left: 250px;top: 355px;
@@ -96,15 +92,15 @@ label{
 }
 
 #anger h3{
-	position: fixed; left: 435px; top: 460px;
+	position: fixed; left: 470px; top: 460px;
 }
 
 #joy h3{
-	position: fixed; left: 590px; top: 460px;
+	position: fixed; left: 670px; top: 460px;
 }
 
 #sad h3{
-	position: fixed; left: 735px; top: 460px;
+	position: fixed; left: 840px; top: 460px;
 }
 
 #disgust h3{
