--- a/UI final/assets/css/forgotpassword.css
+++ b/UI final/assets/css/forgotpassword.css
@@ -4,22 +4,28 @@
   box-sizing: border-box;
   font-family: "segoe ui", verdana, helvetica, arial, sans-serif;
   font-size: 16px;
-  transition: all 500ms ease; }
+  text-decoration: none;t
+  transition: all 500ms ease; 
+}
 
 body {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
-  -moz-font-feature-settings: "liga" on; }
+ background-image:url("../img/bg.png");
+    background-size: cover; 
+    background-repeat: no-repeat; 
+}
 
 .row {
-  background-color: #F1B4BB;
+  background-color: #4AAA97	;
   color: #fff;
   text-align: center;
   padding: 2em 2em 0.5em;
   width: 90%;
   margin: 2em	auto;
-  border-radius: 5px; }
+  height: 400px;
+  border-radius: 5px;
+  -ms-transform: translateY(30%);
+  transform: translateY(30%);
+}
   .row h1 {
     font-size: 2.5em; }
   .row .form-group {
@@ -90,3 +96,92 @@ body {
 @media screen and (min-width: 900px) {
   .row {
     width: 50%; } }
+
+/*header*/
+.top header{
+  background-color: white;
+  transition: all 0.5s;
+  z-index: 997;
+  height: 70px;
+  margin-top: -32px;
+	position: relative;	
+}
+
+.top h3{
+ font-size: 25px;
+ font-family: Maiden Orange;
+color: black;
+ position: absolute;
+margin-left: 130px;
+padding-top: 25px;
+}
+.top .logo img {
+  max-height: 70px;
+  margin-left: 50px;
+position: absolute;
+	
+}
+
+@media (max-width: 1200px) {
+  .top .logo {
+    order: 1;
+  }
+  .top .navmenu {
+ 
+}
+}
+
+/* Desktop Navigation */
+@media (min-width: 1200px) {
+  .navmenu {
+    padding: 0;
+  }
+
+  .navmenu ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    list-style: none;
+    align-items: center;
+	  float: right;
+	  margin-right: 20px;
+	  padding-top: 13px;
+  }
+
+  .navmenu li {
+    position: relative;
+  }
+
+  .navmenu a,
+  .navmenu a:focus {
+    color: var(--nav-color);
+    padding: 18px 15px;
+    font-size: 16px;
+    font-family: var(--nav-font);
+    font-weight: 400;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    white-space: nowrap;
+    transition: 0.3s;
+  }
+
+  .navmenu a i,
+  .navmenu a:focus i {
+    font-size: 12px;
+    line-height: 0;
+    margin-left: 5px;
+    transition: 0.3s;
+  }
+
+  .navmenu li:last-child a {
+    padding-right: 0;
+  }
+
+  .navmenu li:hover>a,
+  .navmenu .active,
+  .navmenu .active:focus {
+    color: pink;
+  }
+
+}
