--- a/UI final/assets/css/forgotpassword.css
+++ b/UI final/assets/css/forgotpassword.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   font-family: "segoe ui", verdana, helvetica, arial, sans-serif;
   font-size: 16px;
-  text-decoration: none;t
+  text-decoration: none;
   transition: all 500ms ease; 
 }
 
@@ -104,7 +104,7 @@ body {
   z-index: 997;
   height: 70px;
   margin-top: -32px;
-	position: relative;	
+  position: relative;	
 }
 
 .top h3{
@@ -132,7 +132,7 @@ position: absolute;
 }
 
 /* Desktop Navigation */
-@media (min-width: 1200px) {
+@media (min-width: 300px) {
   .navmenu {
     padding: 0;
   }
