--- a/UI final/assets/css/emoji.css
+++ b/UI final/assets/css/emoji.css
@@ -335,11 +335,12 @@ form{
 }
 
 
-.container button{
-    font-size: 20px;
-}
-
-
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 300px) {
+	h1{
+		
+	}
+	.container-second{
+		
+	}
   
 }
