--- a/emotion_prediction/templates/registration/password_reset_complete.html
+++ b/emotion_prediction/templates/registration/password_reset_complete.html
@@ -1,5 +1,34 @@
-{% block title %}Password reset{% endblock %}
-{% block content %}
-<h1>Password set</h1>
-<p>Your password has been set. You can <a href="{% url "login" %}">log in now</a></p>
-{% endblock %}
+
+
+{% load static %}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static "css/rs.css" %}">
+    <title>Reset Password</title>
+</head>
+<style>
+    p{
+        text-align:center;
+    }
+</style>
+
+<body>
+    <section>
+        <div class="form-box">
+            <div class="form-value">
+                <form method="post" action="">
+                    {% csrf_token %}
+                    <h2>Password set</h2>
+
+                    <p>Your password has been set.  <a href="{% url "login" %}"><button type="submit">Log in</button></a></p>
+
+                </form>
+            </div>
+        </div>
+    </section>
+</body>
+</html>
