--- a/emotion_prediction/templates/registration/password_reset_confirm.html
+++ b/emotion_prediction/templates/registration/password_reset_confirm.html
@@ -1,16 +1,44 @@
-{% block title %}Reset your password{% endblock %}
-{% block content %}
-<h1>Reset your password</h1>
-{% if validlink %}
-<p>Please enter your new password twice:</p>
-<form action="." method="post">
- {{ form.as_p }}
- {% csrf_token %}
- <p><input type="submit" value="Change my password" /></p>
-</form>
-Then : 
-{% else %}
-<p>The password reset link was invalid, possibly because it has
- already been used. Please request a new password reset.</p>
-{% endif %}
-{% endblock %}
+{% load static %}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static "css/rs.css" %}">
+    <title>Reset Password</title>
+</head>
+
+<body>
+    <section>
+        <div class="form-box">
+            <div class="form-value">
+                <form method="post" action="">
+                    {% csrf_token %}
+                    <h2>Reset Your Password</h2>
+
+                    {% if validlink %}
+                        <div class="inputbox">
+                            <label for="{{ form.new_password1.id_for_label }}">New Password</label>
+                            <br><br>
+                            {{ form.new_password1 }}
+                        </div>
+                        
+                        <div class="inputbox">
+                            <label for="{{ form.new_password2.id_for_label }}">Confirm Password</label>
+                            <br><br>
+                            {{ form.new_password2 }}
+                        </div>
+                        <br><br>
+                    {% else %}
+                        <p>The password reset link was invalid, possibly because it has
+                        already been used. Please request a new password reset.</p>
+                    {% endif %}
+
+                    <button type="submit">Update</button><br><br>
+                </form>
+            </div>
+        </div>
+    </section>
+</body>
+</html>
