--- a/emotion_prediction/templates/sign_up.html
+++ b/emotion_prediction/templates/sign_up.html
@@ -1,97 +1,117 @@
+
+
 {% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signup Form</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
-        }
-
-        .container {
-            max-width: 400px;
-            margin: 0 auto;
-            padding: 50px;
-            background-color: #f1cef8;
-            border-radius: 25px;
-            box-shadow: 0 0 0px rgba(189, 7, 7, 0.2);
-        }
-
-        h1 {
-            text-align: center;
-        }
-
-        .form-group {
-            margin-bottom: 15px;
-        }
-
-        label {
-            display: block;
-            font-weight: bold;
-        }
-
-        input[type="text"],
-        input[type="email"],
-        input[type="password"] {
-            width: 100%;
-            padding: 10px;
-            margin-top: 5px;
-            margin-bottom: 10px;
-            border: 2px solid #ccc;
-            border-radius: 6px;
-        }
-
-        button[type="submit"] {
-            background-color: #007BFF;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 7px;
-            cursor: pointer;
-        }
-
-        button[type="submit"]:hover {
-            background-color: #0056b3;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>Sign Up</h1>
-        <form action="#" method="post">
-            {% csrf_token %}
-            <div class="form-group">
-                <label for="lastname">Last Name:</label>
-                <input type="text" id="lastname" name="last_name" required>
-                
-                <label for="firstname">First Name:</label>
-                <input type="text" id="firstname" name="first_name" required>
-                
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
-            </div>
-            
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" minlength="8" required>
-                
-                <label for="confirm_password">Confirm Password:</label>
-                <input type="password" id="confirm_password" name="confirm_password" minlength="8" required>
-                <small>Password must contain at least 8 characters, including one uppercase letter, one lowercase letter, one number, and one special character (!@#$%^&*).</small>
-            </div>
-            
-            <button type="submit">Sign Up</button>
-        </form>
+    <head>
+        <meta charset="utf-8">
+        <meta content="width=device-width, initial-scale=1.0" name="viewport">
+      
+        <title>Home - Append Bootstrap Temlate</title>
+        <meta content="" name="description">
+        <meta content="" name="keywords">
+      
+      
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com" rel="preconnect">
+        <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+      
+        <!-- Vendor CSS Files -->
+        <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+        <link href="{% static 'assets/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
+        <link href="{% static 'assets/vendor/glightbox/css/glightbox.min.css'%} " rel="stylesheet">
+        <link href="{% static  'assets/vendor/swiper/swiper-bundle.min.css '%}" rel="stylesheet">
+        <link href="{% static 'assets/vendor/aos/aos.css' %}" rel="stylesheet">
         
-    </div>
+      
+        <!-- Template Main CSS File -->
+        <link href=" {% static 'assets/css/main.css' %}" rel="stylesheet">
+        <link rel="stylesheet" href="{% static "css/rss.css" %}">
+      
+      
+        <!-- =======================================================
+        * Template Name: Append
+        * Updated: Sep 18 2023 with Bootstrap v5.3.2
+        * Template URL: https://bootstrapmade.com/append-bootstrap-website-template/
+        * Author: BootstrapMade.com
+        * License: https://bootstrapmade.com/license/
+        ======================================================== -->
+      </head>
+      
+      <body class="index-page" data-bs-spy="scroll" data-bs-target="#navmenu">
+      
+        <!-- ======= Header ======= -->
+        <header id="header" class="header fixed-top d-flex align-items-center">
+          <div class="container-fluid d-flex align-items-center justify-content-between">
+            <a style=" align-items: start;"href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
+              <img src="{% static 'assets/img/icon.png' %}">
+                  <h3>Emojion</h3>
+                 
+                </a>
+          
+      <br>
+            <!-- Nav Menu -->
+            <nav id="navmenu" class="navmenu">
+                <ul >
+                <li><a href="{% url 'home' %}#hero" class="active">Home</a></li>
+                <li><a href="{% url 'home' %}#about">About</a></li>
+                <li><a href="{% url 'home' %}#team">Team</a></li>
+                <li><a href="{% url 'home' %}#contact">Contact</a></li>
+                      <li><a href="{% url 'login' %}">Login</a></li>
+                      
+                </ul>
+      
+              <i class="mobile-nav-toggle "></i>
+            </nav><!-- End Nav Menu -->
+          </div>
+        </header>
+
+<body>
+    <section>
+        <div class="form-box">
+            <div class="form-value">
+                <form method="post" action="">
+                    {% csrf_token %}
+                    
+
+                  
+                        <div class="inputbox">
+                            
+                <input type="text" id="lastname" name="last_name" placeholder="Last Name"required>
+            </div>
+            <div class="inputbox">
+                
+                <input type="text" id="firstname" name="first_name" placeholder="First Name" required>
+            </div>
+            <div class="inputbox">
+
+                <input type="text" id="username" name="username" placeholder="Username" required>
+            </div>
+            <div class="inputbox">
+
+                <input type="email" id="email" name="email" placeholder="Email" required>
+
+                        </div>
+                        
+                        <div class="inputbox">
+                            
+                <input type="password" id="password" name="password" placeholder="Password" minlength="8" required>
+            </div>
+            <div class="inputbox">
+
+                <input type="password" id="confirm_password" name="confirm_password" placeholder="Retype Password"minlength="8" required>
+
+                        </div>
+                        <button type="submit">Sign Up</button><br><br>
+            
+                    
+
+                   
+                </form>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
