--- a/emotion_prediction/templates/emoji-whole.html
+++ b/emotion_prediction/templates/emoji-whole.html
@@ -30,7 +30,7 @@
       </nav><!-- End Nav Menu --> 
       </div>
       <br>	
-	<h1>CHILDHOOD TALES<br>EMOTION PREDICTOR</h1>
+	<h1>CHILDHOOD TALES EMOTION PREDICTOR</h1>
 	
 <div class="container">
 
