--- a/emotion_prediction/templates/emoji.html
+++ b/emotion_prediction/templates/emoji.html
@@ -30,14 +30,14 @@
       </nav><!-- End Nav Menu --> 
       </div>
       <br>	
-	<h1>CHILDHOOD TALES<br>EMOTION PREDICTOR</h1>
+	<h1>CHILDHOOD TALES EMOTION PREDICTOR</h1>
 	
 <div class="container">
 
 	<form>
         <input id="text" type="text" name="" placeholder="Enter text here...">
     </form>  
-    <button type="submit1" name="paragraph" id="paragraph" class="paragraph_btn">PARAGRAPH</button>
+    <button type="submit1" name="paragraph" id="paragraph" class="paragraph_btn" >PARAGRAPH</button>
     <a href="{%url 'whole' %}"><button type="submit2" name="whole" id="whole" class="whole_btn">WHOLE</button></a>
     <button type="submit3" name="analyze" id="analyze" class="analyze_btn">ANALYZE</button>
 
