--- a/emotion_prediction/templates/index.html
+++ b/emotion_prediction/templates/index.html
@@ -105,6 +105,9 @@
                 <div class="icon-box">
                   <i class="bi bi-buildings"></i>
                   <h2>Mission</h2>
+                  <h6> To advance the field of emotion recognition
+                     by leveraging machine learning techniques, specifically Support Vector Machines 
+                     (SVMs), to predict emotions in Filipino children's storybooks. </h6>
                   
                 </div>
               </div> <!-- End Icon Box -->
@@ -113,6 +116,9 @@
                 <div class="icon-box">
                   <i class="bi bi-clipboard-pulse"></i>
                   <h2>Vission</h2>
+                  <h6>The vision of the study is to develop a robust and accurate model that can 
+                    effectively analyze and predict emotional expressions in Filipino children's 
+                    storybooks through the application of Support Vector Machines. </h6>
                   
                 </div>
               </div> <!-- End Icon Box -->
@@ -121,6 +127,14 @@
                 <div class="icon-box">
                   <i class="bi bi-command"></i>
                   <h2>Values</h2>
+                  <h6>
+                    <ul>
+                      <li>Cultural Sensitivity</li>
+                      <li>Education and Empowerment</li>
+                      <li>Ethical Considerations</li>
+                      <li>Child-Centric Approach</li>
+                    </ul>
+                  </h6>
                  
                 </div>
               </div> <!-- End Icon Box -->
@@ -128,7 +142,9 @@
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="500">
                 <div class="icon-box">
                   <i class="bi bi-graph-up-arrow"></i>
-                  <h2>?????</h2>
+                  <h2>Quote</h2>
+                  <h6>"The more that you read, the more things you will know. 
+                    The more that you learn, the more places you'll go." - Dr. Seuss</h6>
                  
                 </div>
               </div> <!-- End Icon Box -->
