--- a/emotion_prediction/static/css/rss.css
+++ b/emotion_prediction/static/css/rss.css
@@ -14,10 +14,11 @@ section {
     background-size: cover;
 }
 
-h4 {
-    color: red;
+.error {
+    color: red!important; 
     text-align: center;
 }
+
 
 .form-box {
     position: relative;
