--- a/emotion_prediction/templates/registration/password_reset_confirm.html
+++ b/emotion_prediction/templates/registration/password_reset_confirm.html
@@ -31,8 +31,8 @@
                         </div>
                         <br><br>
                     {% else %}
-                        <p>The password reset link was invalid, possibly because it has
-                        already been used. Please request a new password reset.</p>
+                        <p style=" text-align: center;">The password reset link was invalid, <br>possibly because it has
+                        already been used. <br>Please request a new password reset.</p>
                     {% endif %}
 
                     <button type="submit">Update</button><br><br>
