--- a/emotion_prediction/templates/registration/password_reset_done.html
+++ b/emotion_prediction/templates/registration/password_reset_done.html
@@ -20,6 +20,8 @@
                         <p>If you don't receive an email, please make sure you've entered the
                         address you registered with.</p>             
                     </div>
+                    <a href="{% url 'password_reset' %}"><button type="button">Resend Email</button></a>
+
                 </form>
             </div>
         </div>
