--- a/emotion_prediction/templates/sign_up.html
+++ b/emotion_prediction/templates/sign_up.html
@@ -71,6 +71,7 @@
 <body>
     <section>
         <div class="form-box">
+            <h5 style= color:white font->CREATE AN ACCOUNT</h5>
             <div class="form-value">
                 <form method="post" action="">
                     {% csrf_token %}
