--- a/emotion_prediction/static/css/rs.css
+++ b/emotion_prediction/static/css/rs.css
@@ -64,7 +64,7 @@ h2 {
     border: 2px solid rgba(225, 225, 225, 0.5);
     border-radius: 5px;
     outline: none;
-    font-size: 1em;
+    font-size: 3px;
     padding: 5px 35px 5px 10px;
     color: #fff;
     box-sizing: border-box;
