--- a/emotion_prediction/static/css/rss.css
+++ b/emotion_prediction/static/css/rss.css
@@ -67,7 +67,7 @@ h2 {
     border: 1px solid rgba(225, 225, 225, 0.5);
     border-radius: 3px;
     outline: none;
-    font-size: 0.8em;
+    font-size: 3px;
     padding: 5px 8px;
     color: #fff;
     box-sizing: border-box;
